// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for spreadsheet interaction. Should render error message when the apollo is returning errors. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Toastify"
      />
      <div
        class="text-button-gray text-lg"
        style="margin-top: 10%;"
      >
        <svg
          class="w-full mb-5"
          fill="currentColor"
          height="3em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="3em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
        <div
          class="text-center mt-5"
        >
          Error fetching data. Please check your network connection.
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Toastify"
    />
    <div
      class="text-button-gray text-lg"
      style="margin-top: 10%;"
    >
      <svg
        class="w-full mb-5"
        fill="currentColor"
        height="3em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="3em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
        />
      </svg>
      <div
        class="text-center mt-5"
      >
        Error fetching data. Please check your network connection.
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Unit tests for spreadsheet interaction. Should render spreadsheet when apollo is not returning errors. 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Toastify"
      />
      <div
        class="w-full"
      >
        <div
          aria-orientation="horizontal"
          class="flex flex px-8 bg-dial-gray-dark"
          role="tablist"
        >
          <div
            aria-controls="headlessui-tabs-panel-undefined"
            aria-selected="true"
            class="w-40 px-3 py-2 text-sm font-medium text-white text-center border-b-4 border-green-500"
            id="headlessui-tabs-tab-1"
            role="tab"
            tabindex="0"
          >
            Products
          </div>
          <div
            aria-controls="headlessui-tabs-panel-undefined"
            aria-selected="false"
            class="w-40 px-3 py-2 text-sm font-medium text-white text-center cursor-pointer hover:bg-white/[0.12] hover:text-white"
            id="headlessui-tabs-tab-2"
            role="tab"
            tabindex="-1"
          >
            Descriptions
          </div>
          <div
            aria-controls="headlessui-tabs-panel-undefined"
            aria-selected="false"
            class="w-40 px-3 py-2 text-sm font-medium text-white text-center cursor-pointer hover:bg-white/[0.12] hover:text-white"
            id="headlessui-tabs-tab-3"
            role="tab"
            tabindex="-1"
          >
            Organizations
          </div>
          <div
            aria-controls="headlessui-tabs-panel-undefined"
            aria-selected="false"
            class="w-40 px-3 py-2 text-sm font-medium text-white text-center cursor-pointer hover:bg-white/[0.12] hover:text-white"
            id="headlessui-tabs-tab-4"
            role="tab"
            tabindex="-1"
          >
            SDGs
          </div>
          <div
            aria-controls="headlessui-tabs-panel-undefined"
            aria-selected="false"
            class="w-40 px-3 py-2 text-sm font-medium text-white text-center cursor-pointer hover:bg-white/[0.12] hover:text-white"
            id="headlessui-tabs-tab-5"
            role="tab"
            tabindex="-1"
          >
            Sectors
          </div>
          <div
            aria-controls="headlessui-tabs-panel-undefined"
            aria-selected="false"
            class="w-40 px-3 py-2 text-sm font-medium text-white text-center cursor-pointer hover:bg-white/[0.12] hover:text-white"
            id="headlessui-tabs-tab-6"
            role="tab"
            tabindex="-1"
          >
            Use Cases Steps
          </div>
          <div
            aria-controls="headlessui-tabs-panel-undefined"
            aria-selected="false"
            class="w-40 px-3 py-2 text-sm font-medium text-white text-center cursor-pointer hover:bg-white/[0.12] hover:text-white"
            id="headlessui-tabs-tab-7"
            role="tab"
            tabindex="-1"
          >
            Building Blocks
          </div>
          <div
            aria-controls="headlessui-tabs-panel-undefined"
            aria-selected="false"
            class="w-40 px-3 py-2 text-sm font-medium text-white text-center cursor-pointer hover:bg-white/[0.12] hover:text-white"
            id="headlessui-tabs-tab-8"
            role="tab"
            tabindex="-1"
          >
            Product Pricing
          </div>
        </div>
        <div
          class="pt-2 pl-8 pr-4"
          style="min-height: 70vh;"
        >
          <div
            aria-labelledby="headlessui-tabs-tab-undefined"
            id="headlessui-tabs-panel-9"
            role="tabpanel"
            tabindex="0"
          >
            <div
              class="handsontable htRowHeaders htColumnHeaders"
              data-initialstyle="z-index: 19;"
              data-originalstyle="z-index: 19; width: 100%;"
              dir=""
              id="product-spreadsheet"
              style="z-index: 19; width: 100%;"
            >
              <div
                class="ht_master handsontable"
                dir="ltr"
                style="overflow: visible;"
              >
                <div
                  class="wtHolder"
                  style="position: relative; overflow: visible;"
                >
                  <div
                    class="wtHider"
                    style="width: 450px; height: 47px;"
                  >
                    <div
                      class="wtSpreader"
                      style="position: relative; top: 0px; left: 0px;"
                    >
                      <table
                        class="htCore"
                      >
                        <colgroup>
                          <col
                            class="rowHeader"
                            style="width: 50px;"
                          />
                          <col
                            style="width: 50px;"
                          />
                        </colgroup>
                        <thead>
                          <tr>
                            <th
                              class=""
                            >
                              <div
                                class="relative"
                              >
                                <span
                                  class="colHeader cornerHeader"
                                >
                                   
                                </span>
                              </div>
                            </th>
                            <th
                              class=""
                            >
                              <div
                                class="relative"
                              >
                                <span
                                  class="colHeader"
                                >
                                  Name
                                </span>
                              </div>
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr>
                            <th
                              class=""
                            >
                              <div
                                class="relative"
                              >
                                <span
                                  class="rowHeader"
                                >
                                  1
                                </span>
                              </div>
                            </th>
                            <td
                              class=""
                            >
                              Product A
                            </td>
                          </tr>
                        </tbody>
                      </table>
                      <div
                        class="htBorders"
                      >
                        <div
                          style="position: absolute; top: 0px; left: 0px;"
                        >
                          <div
                            class="wtBorder current"
                            style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                          />
                          <div
                            class="wtBorder current"
                            style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                          />
                          <div
                            class="wtBorder current"
                            style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                          />
                          <div
                            class="wtBorder current"
                            style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                          />
                          <div
                            class="wtBorder current corner"
                            style="background-color: rgb(75, 137, 255); height: 6px; width: 6px; border: 1px solid #fff; display: none;"
                          />
                        </div>
                        <div
                          style="position: absolute; top: 0px; left: 0px;"
                        >
                          <div
                            class="wtBorder fill"
                            style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                          />
                          <div
                            class="wtBorder fill"
                            style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                          />
                          <div
                            class="wtBorder fill"
                            style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                          />
                          <div
                            class="wtBorder fill"
                            style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                          />
                          <div
                            class="wtBorder fill corner"
                            style="background-color: rgb(255, 0, 0); height: 6px; width: 6px; border: 1px solid #fff; display: none;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ht_clone_top handsontable"
                dir="ltr"
                style="position: absolute; top: 0px; overflow: visible; left: 0px; height: 0px; transform: translate3d(0px,0px,0);"
              >
                <div
                  class="wtHolder"
                  style="position: relative; height: 3px;"
                >
                  <div
                    class="wtHider"
                    style="width: 450px;"
                  >
                    <div
                      class="wtSpreader"
                      style="position: relative; left: 0px;"
                    >
                      <table
                        class="htCore"
                      >
                        <colgroup>
                          <col
                            class="rowHeader"
                            style="width: 50px;"
                          />
                          <col
                            style="width: 50px;"
                          />
                        </colgroup>
                        <thead>
                          <tr>
                            <th
                              class=""
                            >
                              <div
                                class="relative"
                              >
                                <span
                                  class="colHeader cornerHeader"
                                >
                                   
                                </span>
                              </div>
                            </th>
                            <th
                              class=""
                            >
                              <div
                                class="relative"
                              >
                                <span
                                  class="colHeader"
                                >
                                  Name
                                </span>
                              </div>
                            </th>
                          </tr>
                        </thead>
                        <tbody />
                      </table>
                      <div
                        class="htBorders"
                      >
                        <div
                          style="position: absolute; top: 0px; left: 0px;"
                        >
                          <div
                            class="wtBorder current"
                            style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                          />
                          <div
                            class="wtBorder current"
                            style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                          />
                          <div
                            class="wtBorder current"
                            style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                          />
                          <div
                            class="wtBorder current"
                            style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                          />
                          <div
                            class="wtBorder current corner"
                            style="background-color: rgb(75, 137, 255); height: 6px; width: 6px; border: 1px solid #fff; display: none;"
                          />
                        </div>
                        <div
                          style="position: absolute; top: 0px; left: 0px;"
                        >
                          <div
                            class="wtBorder fill"
                            style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                          />
                          <div
                            class="wtBorder fill"
                            style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                          />
                          <div
                            class="wtBorder fill"
                            style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                          />
                          <div
                            class="wtBorder fill"
                            style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                          />
                          <div
                            class="wtBorder fill corner"
                            style="background-color: rgb(255, 0, 0); height: 6px; width: 6px; border: 1px solid #fff; display: none;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ht_clone_bottom handsontable"
                dir="ltr"
                style="position: absolute; top: 0px; overflow: visible; left: 0px;"
              >
                <div
                  class="wtHolder"
                  style="position: relative;"
                >
                  <div
                    class="wtHider"
                  >
                    <div
                      class="wtSpreader"
                      style="position: relative;"
                    >
                      <table
                        class="htCore"
                      >
                        <colgroup />
                        <thead />
                        <tbody />
                      </table>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ht_clone_inline_start ht_clone_left handsontable"
                dir="ltr"
                style="position: absolute; top: 0px; overflow: visible; left: 0px; width: 0px; transform: translate3d(0px,0px,0);"
              >
                <div
                  class="wtHolder"
                  style="position: relative; width: 3px;"
                >
                  <div
                    class="wtHider"
                    style="height: 47px;"
                  >
                    <div
                      class="wtSpreader"
                      style="position: relative; top: 0px;"
                    >
                      <table
                        class="htCore"
                      >
                        <colgroup>
                          <col
                            class="rowHeader"
                            style="width: 50px;"
                          />
                        </colgroup>
                        <thead>
                          <tr>
                            <th
                              class=""
                            >
                              <div
                                class="relative"
                              >
                                <span
                                  class="colHeader cornerHeader"
                                >
                                   
                                </span>
                              </div>
                            </th>
                          </tr>
                        </thead>
                        <tbody>
                          <tr>
                            <th
                              class=""
                            >
                              <div
                                class="relative"
                              >
                                <span
                                  class="rowHeader"
                                >
                                  1
                                </span>
                              </div>
                            </th>
                          </tr>
                        </tbody>
                      </table>
                      <div
                        class="htBorders"
                      >
                        <div
                          style="position: absolute; top: 0px; left: 0px;"
                        >
                          <div
                            class="wtBorder current"
                            style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                          />
                          <div
                            class="wtBorder current"
                            style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                          />
                          <div
                            class="wtBorder current"
                            style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                          />
                          <div
                            class="wtBorder current"
                            style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                          />
                          <div
                            class="wtBorder current corner"
                            style="background-color: rgb(75, 137, 255); height: 6px; width: 6px; border: 1px solid #fff; display: none;"
                          />
                        </div>
                        <div
                          style="position: absolute; top: 0px; left: 0px;"
                        >
                          <div
                            class="wtBorder fill"
                            style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                          />
                          <div
                            class="wtBorder fill"
                            style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                          />
                          <div
                            class="wtBorder fill"
                            style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                          />
                          <div
                            class="wtBorder fill"
                            style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                          />
                          <div
                            class="wtBorder fill corner"
                            style="background-color: rgb(255, 0, 0); height: 6px; width: 6px; border: 1px solid #fff; display: none;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ht_clone_top_inline_start_corner ht_clone_top_left_corner handsontable"
                dir="ltr"
                style="position: absolute; top: 0px; overflow: visible; left: 0px; transform: translate3d(0px,0px,0); height: 0px; width: 0px;"
              >
                <div
                  class="wtHolder"
                  style="position: relative;"
                >
                  <div
                    class="wtHider"
                  >
                    <div
                      class="wtSpreader"
                      style="position: relative;"
                    >
                      <table
                        class="htCore"
                      >
                        <colgroup>
                          <col
                            class="rowHeader"
                            style="width: 50px;"
                          />
                        </colgroup>
                        <thead>
                          <tr>
                            <th
                              class=""
                            >
                              <div
                                class="relative"
                              >
                                <span
                                  class="colHeader cornerHeader"
                                >
                                   
                                </span>
                              </div>
                            </th>
                          </tr>
                        </thead>
                        <tbody />
                      </table>
                      <div
                        class="htBorders"
                      >
                        <div
                          style="position: absolute; top: 0px; left: 0px;"
                        >
                          <div
                            class="wtBorder current"
                            style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                          />
                          <div
                            class="wtBorder current"
                            style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                          />
                          <div
                            class="wtBorder current"
                            style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                          />
                          <div
                            class="wtBorder current"
                            style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                          />
                          <div
                            class="wtBorder current corner"
                            style="background-color: rgb(75, 137, 255); height: 6px; width: 6px; border: 1px solid #fff; display: none;"
                          />
                        </div>
                        <div
                          style="position: absolute; top: 0px; left: 0px;"
                        >
                          <div
                            class="wtBorder fill"
                            style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                          />
                          <div
                            class="wtBorder fill"
                            style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                          />
                          <div
                            class="wtBorder fill"
                            style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                          />
                          <div
                            class="wtBorder fill"
                            style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                          />
                          <div
                            class="wtBorder fill corner"
                            style="background-color: rgb(255, 0, 0); height: 6px; width: 6px; border: 1px solid #fff; display: none;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ht_clone_bottom_inline_start_corner ht_clone_bottom_left_corner handsontable"
                dir="ltr"
                style="position: absolute; overflow: visible; left: 0px; bottom: 0px; height: 0px; width: 0px;"
              >
                <div
                  class="wtHolder"
                  style="position: relative;"
                >
                  <div
                    class="wtHider"
                  >
                    <div
                      class="wtSpreader"
                      style="position: relative;"
                    >
                      <table
                        class="htCore"
                      >
                        <colgroup />
                        <thead />
                        <tbody />
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="htMenu htContextMenu"
    />
  </body>,
  "container": <div>
    <div
      class="Toastify"
    />
    <div
      class="w-full"
    >
      <div
        aria-orientation="horizontal"
        class="flex flex px-8 bg-dial-gray-dark"
        role="tablist"
      >
        <div
          aria-controls="headlessui-tabs-panel-undefined"
          aria-selected="true"
          class="w-40 px-3 py-2 text-sm font-medium text-white text-center border-b-4 border-green-500"
          id="headlessui-tabs-tab-1"
          role="tab"
          tabindex="0"
        >
          Products
        </div>
        <div
          aria-controls="headlessui-tabs-panel-undefined"
          aria-selected="false"
          class="w-40 px-3 py-2 text-sm font-medium text-white text-center cursor-pointer hover:bg-white/[0.12] hover:text-white"
          id="headlessui-tabs-tab-2"
          role="tab"
          tabindex="-1"
        >
          Descriptions
        </div>
        <div
          aria-controls="headlessui-tabs-panel-undefined"
          aria-selected="false"
          class="w-40 px-3 py-2 text-sm font-medium text-white text-center cursor-pointer hover:bg-white/[0.12] hover:text-white"
          id="headlessui-tabs-tab-3"
          role="tab"
          tabindex="-1"
        >
          Organizations
        </div>
        <div
          aria-controls="headlessui-tabs-panel-undefined"
          aria-selected="false"
          class="w-40 px-3 py-2 text-sm font-medium text-white text-center cursor-pointer hover:bg-white/[0.12] hover:text-white"
          id="headlessui-tabs-tab-4"
          role="tab"
          tabindex="-1"
        >
          SDGs
        </div>
        <div
          aria-controls="headlessui-tabs-panel-undefined"
          aria-selected="false"
          class="w-40 px-3 py-2 text-sm font-medium text-white text-center cursor-pointer hover:bg-white/[0.12] hover:text-white"
          id="headlessui-tabs-tab-5"
          role="tab"
          tabindex="-1"
        >
          Sectors
        </div>
        <div
          aria-controls="headlessui-tabs-panel-undefined"
          aria-selected="false"
          class="w-40 px-3 py-2 text-sm font-medium text-white text-center cursor-pointer hover:bg-white/[0.12] hover:text-white"
          id="headlessui-tabs-tab-6"
          role="tab"
          tabindex="-1"
        >
          Use Cases Steps
        </div>
        <div
          aria-controls="headlessui-tabs-panel-undefined"
          aria-selected="false"
          class="w-40 px-3 py-2 text-sm font-medium text-white text-center cursor-pointer hover:bg-white/[0.12] hover:text-white"
          id="headlessui-tabs-tab-7"
          role="tab"
          tabindex="-1"
        >
          Building Blocks
        </div>
        <div
          aria-controls="headlessui-tabs-panel-undefined"
          aria-selected="false"
          class="w-40 px-3 py-2 text-sm font-medium text-white text-center cursor-pointer hover:bg-white/[0.12] hover:text-white"
          id="headlessui-tabs-tab-8"
          role="tab"
          tabindex="-1"
        >
          Product Pricing
        </div>
      </div>
      <div
        class="pt-2 pl-8 pr-4"
        style="min-height: 70vh;"
      >
        <div
          aria-labelledby="headlessui-tabs-tab-undefined"
          id="headlessui-tabs-panel-9"
          role="tabpanel"
          tabindex="0"
        >
          <div
            class="handsontable htRowHeaders htColumnHeaders"
            data-initialstyle="z-index: 19;"
            data-originalstyle="z-index: 19; width: 100%;"
            dir=""
            id="product-spreadsheet"
            style="z-index: 19; width: 100%;"
          >
            <div
              class="ht_master handsontable"
              dir="ltr"
              style="overflow: visible;"
            >
              <div
                class="wtHolder"
                style="position: relative; overflow: visible;"
              >
                <div
                  class="wtHider"
                  style="width: 450px; height: 47px;"
                >
                  <div
                    class="wtSpreader"
                    style="position: relative; top: 0px; left: 0px;"
                  >
                    <table
                      class="htCore"
                    >
                      <colgroup>
                        <col
                          class="rowHeader"
                          style="width: 50px;"
                        />
                        <col
                          style="width: 50px;"
                        />
                      </colgroup>
                      <thead>
                        <tr>
                          <th
                            class=""
                          >
                            <div
                              class="relative"
                            >
                              <span
                                class="colHeader cornerHeader"
                              >
                                 
                              </span>
                            </div>
                          </th>
                          <th
                            class=""
                          >
                            <div
                              class="relative"
                            >
                              <span
                                class="colHeader"
                              >
                                Name
                              </span>
                            </div>
                          </th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <th
                            class=""
                          >
                            <div
                              class="relative"
                            >
                              <span
                                class="rowHeader"
                              >
                                1
                              </span>
                            </div>
                          </th>
                          <td
                            class=""
                          >
                            Product A
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <div
                      class="htBorders"
                    >
                      <div
                        style="position: absolute; top: 0px; left: 0px;"
                      >
                        <div
                          class="wtBorder current"
                          style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                        />
                        <div
                          class="wtBorder current"
                          style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                        />
                        <div
                          class="wtBorder current"
                          style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                        />
                        <div
                          class="wtBorder current"
                          style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                        />
                        <div
                          class="wtBorder current corner"
                          style="background-color: rgb(75, 137, 255); height: 6px; width: 6px; border: 1px solid #fff; display: none;"
                        />
                      </div>
                      <div
                        style="position: absolute; top: 0px; left: 0px;"
                      >
                        <div
                          class="wtBorder fill"
                          style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                        />
                        <div
                          class="wtBorder fill"
                          style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                        />
                        <div
                          class="wtBorder fill"
                          style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                        />
                        <div
                          class="wtBorder fill"
                          style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                        />
                        <div
                          class="wtBorder fill corner"
                          style="background-color: rgb(255, 0, 0); height: 6px; width: 6px; border: 1px solid #fff; display: none;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ht_clone_top handsontable"
              dir="ltr"
              style="position: absolute; top: 0px; overflow: visible; left: 0px; height: 0px; transform: translate3d(0px,0px,0);"
            >
              <div
                class="wtHolder"
                style="position: relative; height: 3px;"
              >
                <div
                  class="wtHider"
                  style="width: 450px;"
                >
                  <div
                    class="wtSpreader"
                    style="position: relative; left: 0px;"
                  >
                    <table
                      class="htCore"
                    >
                      <colgroup>
                        <col
                          class="rowHeader"
                          style="width: 50px;"
                        />
                        <col
                          style="width: 50px;"
                        />
                      </colgroup>
                      <thead>
                        <tr>
                          <th
                            class=""
                          >
                            <div
                              class="relative"
                            >
                              <span
                                class="colHeader cornerHeader"
                              >
                                 
                              </span>
                            </div>
                          </th>
                          <th
                            class=""
                          >
                            <div
                              class="relative"
                            >
                              <span
                                class="colHeader"
                              >
                                Name
                              </span>
                            </div>
                          </th>
                        </tr>
                      </thead>
                      <tbody />
                    </table>
                    <div
                      class="htBorders"
                    >
                      <div
                        style="position: absolute; top: 0px; left: 0px;"
                      >
                        <div
                          class="wtBorder current"
                          style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                        />
                        <div
                          class="wtBorder current"
                          style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                        />
                        <div
                          class="wtBorder current"
                          style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                        />
                        <div
                          class="wtBorder current"
                          style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                        />
                        <div
                          class="wtBorder current corner"
                          style="background-color: rgb(75, 137, 255); height: 6px; width: 6px; border: 1px solid #fff; display: none;"
                        />
                      </div>
                      <div
                        style="position: absolute; top: 0px; left: 0px;"
                      >
                        <div
                          class="wtBorder fill"
                          style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                        />
                        <div
                          class="wtBorder fill"
                          style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                        />
                        <div
                          class="wtBorder fill"
                          style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                        />
                        <div
                          class="wtBorder fill"
                          style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                        />
                        <div
                          class="wtBorder fill corner"
                          style="background-color: rgb(255, 0, 0); height: 6px; width: 6px; border: 1px solid #fff; display: none;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ht_clone_bottom handsontable"
              dir="ltr"
              style="position: absolute; top: 0px; overflow: visible; left: 0px;"
            >
              <div
                class="wtHolder"
                style="position: relative;"
              >
                <div
                  class="wtHider"
                >
                  <div
                    class="wtSpreader"
                    style="position: relative;"
                  >
                    <table
                      class="htCore"
                    >
                      <colgroup />
                      <thead />
                      <tbody />
                    </table>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ht_clone_inline_start ht_clone_left handsontable"
              dir="ltr"
              style="position: absolute; top: 0px; overflow: visible; left: 0px; width: 0px; transform: translate3d(0px,0px,0);"
            >
              <div
                class="wtHolder"
                style="position: relative; width: 3px;"
              >
                <div
                  class="wtHider"
                  style="height: 47px;"
                >
                  <div
                    class="wtSpreader"
                    style="position: relative; top: 0px;"
                  >
                    <table
                      class="htCore"
                    >
                      <colgroup>
                        <col
                          class="rowHeader"
                          style="width: 50px;"
                        />
                      </colgroup>
                      <thead>
                        <tr>
                          <th
                            class=""
                          >
                            <div
                              class="relative"
                            >
                              <span
                                class="colHeader cornerHeader"
                              >
                                 
                              </span>
                            </div>
                          </th>
                        </tr>
                      </thead>
                      <tbody>
                        <tr>
                          <th
                            class=""
                          >
                            <div
                              class="relative"
                            >
                              <span
                                class="rowHeader"
                              >
                                1
                              </span>
                            </div>
                          </th>
                        </tr>
                      </tbody>
                    </table>
                    <div
                      class="htBorders"
                    >
                      <div
                        style="position: absolute; top: 0px; left: 0px;"
                      >
                        <div
                          class="wtBorder current"
                          style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                        />
                        <div
                          class="wtBorder current"
                          style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                        />
                        <div
                          class="wtBorder current"
                          style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                        />
                        <div
                          class="wtBorder current"
                          style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                        />
                        <div
                          class="wtBorder current corner"
                          style="background-color: rgb(75, 137, 255); height: 6px; width: 6px; border: 1px solid #fff; display: none;"
                        />
                      </div>
                      <div
                        style="position: absolute; top: 0px; left: 0px;"
                      >
                        <div
                          class="wtBorder fill"
                          style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                        />
                        <div
                          class="wtBorder fill"
                          style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                        />
                        <div
                          class="wtBorder fill"
                          style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                        />
                        <div
                          class="wtBorder fill"
                          style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                        />
                        <div
                          class="wtBorder fill corner"
                          style="background-color: rgb(255, 0, 0); height: 6px; width: 6px; border: 1px solid #fff; display: none;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ht_clone_top_inline_start_corner ht_clone_top_left_corner handsontable"
              dir="ltr"
              style="position: absolute; top: 0px; overflow: visible; left: 0px; transform: translate3d(0px,0px,0); height: 0px; width: 0px;"
            >
              <div
                class="wtHolder"
                style="position: relative;"
              >
                <div
                  class="wtHider"
                >
                  <div
                    class="wtSpreader"
                    style="position: relative;"
                  >
                    <table
                      class="htCore"
                    >
                      <colgroup>
                        <col
                          class="rowHeader"
                          style="width: 50px;"
                        />
                      </colgroup>
                      <thead>
                        <tr>
                          <th
                            class=""
                          >
                            <div
                              class="relative"
                            >
                              <span
                                class="colHeader cornerHeader"
                              >
                                 
                              </span>
                            </div>
                          </th>
                        </tr>
                      </thead>
                      <tbody />
                    </table>
                    <div
                      class="htBorders"
                    >
                      <div
                        style="position: absolute; top: 0px; left: 0px;"
                      >
                        <div
                          class="wtBorder current"
                          style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                        />
                        <div
                          class="wtBorder current"
                          style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                        />
                        <div
                          class="wtBorder current"
                          style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                        />
                        <div
                          class="wtBorder current"
                          style="background-color: rgb(75, 137, 255); height: 2px; width: 2px; display: none;"
                        />
                        <div
                          class="wtBorder current corner"
                          style="background-color: rgb(75, 137, 255); height: 6px; width: 6px; border: 1px solid #fff; display: none;"
                        />
                      </div>
                      <div
                        style="position: absolute; top: 0px; left: 0px;"
                      >
                        <div
                          class="wtBorder fill"
                          style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                        />
                        <div
                          class="wtBorder fill"
                          style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                        />
                        <div
                          class="wtBorder fill"
                          style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                        />
                        <div
                          class="wtBorder fill"
                          style="background-color: rgb(255, 0, 0); height: 1px; width: 1px; display: none;"
                        />
                        <div
                          class="wtBorder fill corner"
                          style="background-color: rgb(255, 0, 0); height: 6px; width: 6px; border: 1px solid #fff; display: none;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ht_clone_bottom_inline_start_corner ht_clone_bottom_left_corner handsontable"
              dir="ltr"
              style="position: absolute; overflow: visible; left: 0px; bottom: 0px; height: 0px; width: 0px;"
            >
              <div
                class="wtHolder"
                style="position: relative;"
              >
                <div
                  class="wtHider"
                >
                  <div
                    class="wtSpreader"
                    style="position: relative;"
                  >
                    <table
                      class="htCore"
                    >
                      <colgroup />
                      <thead />
                      <tbody />
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
